# libpoktroll-clients

./: .gitignore  CMakeLists.txt  PKGBUILD.in  README.md  buf.gen.yaml  buf.yaml  libpoktroll_clients.pc.in  library.h  test_main.c
cgo/: app_query_client.go  block_client.go  block_query_client.go  depinject.go  errors.go  events_query_client.go  gateway_query_client.go  go.mod  go.sum  interface.go  main.go  memory.go  morse_claim_messages.go  morse_keys.go  multi_client.go  protobuf.go  query_client.go  ring_client.go  service_query_client.go  session_query_client.go  shared_query_client.go  supplier_query_client.go  tx_client.go  tx_context.go
cmake/: InstallerConfig.cmake  TestConfig.cmake
include/: callback.h  client.h  context.h  gas.h  memory.h  morse_keys.h  protobuf.h
libs/poktroll/: client.h  events_query_client.h  libclients.h
scripts/: build_pkg.sh
src/: context.c
tests/: test_main.c
